# pyrust-template

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
crates/mathops/: Cargo.toml
crates/mathops/src/: lib.rs
examples/: demo.py
python/pyrust_template/: __init__.py  _core.pyi  py.typed
src/: lib.rs  math_ops.rs
tests/: test_accumulator.py  test_math_ops.py
